JMWE-17: compatibility with JIRA4.0.0-Beta3 Bump to v1.4 (as in JIRA 4...)
git-svn-id: https://studio.plugins.atlassian.com/svn/JMWE/trunk@54651 2c54a935-e501-0410-bc05-97a93f6bca70