@@ -13,7 +13,7 @@
 	<groupId>com.innovalog.jmwe</groupId>
 	<artifactId>jira-misc-workflow-extensions</artifactId>
 	<name>JIRA Misc Workflow Extensions</name>
-	<version>1.3.3</version>
+	<version>1.4</version>
 	<packaging>jar</packaging>
 
 	<scm>
@@ -30,7 +30,7 @@
 			Change this property to compile your plugin against different JIRA
 			versions.
 		-->
-		<jira.version>3.13.3</jira.version>
+		<jira.version>4.0.0-Beta3</jira.version>
 	</properties>
 
 	<description>Several JIRA workflow extensions</description>
@@ -119,7 +119,7 @@
 				<maven.test.skip>true</maven.test.skip>
 				<cargo.wait>true</cargo.wait>
 				<jvmargs>
-					<![CDATA[-Xms128m -Xmx256m -Xdebug -Xnoagent -Xrunjdwp:server=y,transport=dt_socket,address=5005,suspend=n]]>
+					<![CDATA[-Xms128m -Xmx256m -XX:MaxPermSize=128M -Xdebug -Xnoagent -Xrunjdwp:server=y,transport=dt_socket,address=5005,suspend=n]]>
 				</jvmargs>
 				<jira.config.directory>
 					plugin-debug
